# flightcomputer_ava

./: .gitignore  ARD_VER.ino  README.md
includes/: SBUS.h
src/: main.cpp
src/firmware/: CMakeLists.txt  example_auto_set_url.cmake
src/firmware/LSM6DSOX/: CMakeLists.txt  LSM6DSOX.h
src/firmware/LSM6DSOX/arduino/: Arduino.h  USBAPI.h  WString.h
src/firmware/MPU6050/: MPU6050.h
src/firmware/comm_protocols/bus_scan/: CMakeLists.txt  bus_scan.c
src/firmware/comm_protocols/i2c/: CMakeLists.txt  bmp280_i2c.c
src/firmware/comm_protocols/pwm/: CMakeLists.txt  hello_pwm.c
src/firmware/control/: PIController.c  PID_original_pms67_PID.c  PID_placeholder.cpp  Presentation_pptx.pptx
src/firmware/filtering/: Kalmanfilter.c  LowPassFilter.c
src/firmware/open_fc/: CMakeLists.txt  open_fc.cpp
